# Aqloss

./: README.md  changelog.md  changes.md  flutter_rust_bridge.yaml  pubspec.yaml  roadmap.json
.github/: codeowners  contributing.md  funding.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/issue_template/: bug_report.md  feature_request.md
.github/workflows/: build-apple.yml  build-release.yml  build-test.yml
android/app/: build.gradle.kts  proguard-rules.pro
integration_test/: simple_test.dart
ios/Runner/: AppDelegate.swift  Info.plist  MediaControlPlugin.swift
ios/Runner.xcodeproj/: project.pbxproj
lib/: app.dart  main.dart
lib/models/: audio_format.dart  playlist.dart  track.dart
lib/providers/: accent_provider.dart  audio_device_provider.dart  history_provider.dart  library_provider.dart  lyrics_provider.dart  player_provider.dart  playlist_provider.dart  settings_provider.dart
lib/screens/: album_screen.dart  artists_screen.dart  history_screen.dart  home_screen.dart  library_screen.dart  player_screen.dart  settings_screen.dart
lib/services/: audio_service.dart  discord_service.dart  lastfm_service.dart  library_service.dart  metadata_service.dart  playlist_io_service.dart  scrobble_controller.dart
lib/util/: android_path_helper.dart  logger.dart  search_focus_tracker.dart
lib/widgets/: custom_slider.dart  eq_panel.dart  global_search.dart  lastfm_auth_row.dart  lyrics_view.dart  mini_player_bar.dart  mini_player_window.dart  now_playing_header.dart  player_controls.dart  q_sheet.dart  q_spinner.dart  q_toast.dart  queue_panel.dart  track_tile.dart  (+4 more)
linux/: CMakeLists.txt  xyz.nokarin.Aqloss.desktop  xyz.nokarin.Aqloss.metainfo.xml  xyz.nokarin.aqloss.desktop  xyz.nokarin.aqloss.metainfo.xml
rust/: Cargo.toml
rust/src/: api.rs  audio_engine.rs  decoder.rs  discord_rpc.rs  eq.rs  frb_generated.rs  lib.rs  logger.rs  metadata.rs  output.rs  resampler.rs  stereo_enhance.rs
rust_builder/: pubspec.yaml
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+55 files in other folders)
