[package]
name = "aqloss_rust_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "aqloss_rust_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.12.0"

# Audio decoding
symphonia = { version = "0.5", features = ["all"] }

# Audio output (cross-platform)
cpal = "0.17"

# High-quality resampling
rubato = "2"

# Metadata & tag parsing
lofty = "0.24"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"

walkdir = "2"
discord-presence = "3.2.0"
ringbuf = "0.4.8"
biquad = "0.6.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Media_Audio",
    "Win32_System_Com",
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_Security",
] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
